--- a/src/pages/profile/components/dividingLine/dividingLine.scss
+++ b/src/pages/profile/components/dividingLine/dividingLine.scss
@@ -1,8 +1,8 @@
-@import "/utils/styles/variables.scss";
+@import "/utils/styles/variables";
 
 .dividing-line {
   width: 100%;
   height: 1px;
   margin: 10px 0;
-  background-color: $GRAY_COLOR_2;
+  background-color: $gray-color-2;
 }
