--- a/src/components/avatar/avatar.scss
+++ b/src/components/avatar/avatar.scss
@@ -1,11 +1,10 @@
-@import "/utils/styles/variables.scss";
+@import "/utils/styles/variables";
 
 .avatar {
   position: relative;
   width: 100%;
   height: 100%;
-
   border-radius: 65%;
-  background-color: $GRAY_COLOR_3;
+  background-color: $gray-color-3;
   object-fit: scale-down;
 }
