--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,45 +1,39 @@
-@import "/utils/styles/variables.scss";
+@import "/utils/styles/variables";
 
 .label {
   width: 100%;
-  color: $GRAY_COLOR_1;
+  color: $gray-color-1;
 
   &__text {
     margin: 0;
 
-    @include text2Badge;
+    @include text2-badge;
   }
 
   &__error {
     margin: 0;
+    color: $red-color-1;
 
-    color: $RED_COLOR_1;
-
-    @include text2Badge;
+    @include text2-badge;
   }
 }
 
 .input {
   width: 100%;
-
   padding: 0 0 7px;
   margin: 8px 0 7px;
-
   border: none;
-  border-bottom: 1px solid $BLUE_COLOR_1;
-
+  border-bottom: 1px solid $blue-color-1;
   background-image: none;
   background-color: transparent;
-
   box-shadow: none;
-
-  color: $BLACK_COLOR_1;
+  color: $black-color-1;
   outline: none;
 
 
-  @include text1Regular;
+  @include text1-regular;
 
   &::placeholder {
-    color: $GRAY_COLOR_1;
+    color: $gray-color-1;
   }
 }
