--- a/src/pages/auth/components/form/form.scss
+++ b/src/pages/auth/components/form/form.scss
@@ -1,18 +1,16 @@
-@import "/utils/styles/variables.scss";
+@import "/utils/styles/variables";
 
 .auth-form {
   width: 100%;
-
   display: flex;
   align-items: center;
   flex-direction: column;
 
   &__title {
     margin: 0 0 40px;
+    color: $black-color-1;
 
-    color: $BLACK_COLOR_1;
-
-    @include title2Regular;
+    @include title2-regular;
   }
 
   &_login {
