--- a/src/pages/chat/components/searchInput/searchInput.scss
+++ b/src/pages/chat/components/searchInput/searchInput.scss
@@ -1,4 +1,4 @@
-@import "/utils/styles/variables.scss";
+@import "/utils/styles/variables";
 
 .search-input {
   position: relative;
@@ -7,23 +7,19 @@
   border: none;
   outline: none;
   box-sizing: border-box;
-
   width: 100%;
   height: 32px;
-
-  color: $GRAY_COLOR_1;
+  color: $gray-color-1;
   text-align: center;
-
   border-radius: 5px;
-  background-color: $GRAY_COLOR_3;
-
+  background-color: $gray-color-3;
   transition: .5s;
 
-  @include extraText3Regular;
+  @include extra-text3-regular;
 
   &:not(:focus)::placeholder {
     text-align: center;
-    color: $GRAY_COLOR_1;
+    color: $gray-color-1;
   }
 
   &:focus::placeholder {
