--- a/src/pages/chat/layouts/chatScreen/chatScreen.scss
+++ b/src/pages/chat/layouts/chatScreen/chatScreen.scss
@@ -1,20 +1,17 @@
-@import "/utils/styles/variables.scss";
+@import "/utils/styles/variables";
 
 .chat-screen {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
   padding: 10px 20px;
   box-sizing: border-box;
-
   width: 100%;
   height: 100%;
 
   &__header {
     position: relative;
     padding-bottom: 10px;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -25,8 +22,7 @@
       left: 0;
       width: 100%;
       content: "";
-
-      border-bottom: 1px solid $GRAY_COLOR_2;
+      border-bottom: 1px solid $gray-color-2;
     }
   }
 
@@ -38,23 +34,18 @@
   &__user-info {
     display: flex;
     align-items: center;
-
-    color: $BLACK_COLOR_1;
-
+    color: $black-color-1;
     gap: 10px;
 
-    @include text1Medium;
+    @include text1-medium;
   }
 
   &__bottom-panel {
     position: relative;
-
     padding-top: 10px;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     gap: 10px;
 
     &::after {
@@ -63,27 +54,23 @@
       left: 0;
       width: 100%;
       position: absolute;
-
-      border-top: 1px solid $GRAY_COLOR_2;
+      border-top: 1px solid $gray-color-2;
     }
   }
 
   &__input-message {
     width: 100%;
     height: 100%;
-
     margin: 0;
     padding: 0 20px;
-
-    color: $GRAY_COLOR_1;
-
+    color: $gray-color-1;
     border: none;
     outline: none;
     border-radius: 30px;
-    background-color: $GRAY_COLOR_3;
+    background-color: $gray-color-3;
     box-sizing: border-box;
 
-    @include extraText3Regular;
+    @include extra-text3-regular;
   }
 
   &__label-message {
