--- a/src/pages/profile/components/avatarWrapper/avatarWrapper.scss
+++ b/src/pages/profile/components/avatarWrapper/avatarWrapper.scss
@@ -1,10 +1,9 @@
-@import "/utils/styles/variables.scss";
+@import "/utils/styles/variables";
 
 .avatar-wrapper {
   width: 130px;
   height: 130px;
   margin-bottom: 21px;
-
   position: relative;
 
   &_edit {
@@ -17,20 +16,17 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
       width: 100%;
       height: 100%;
-
       border-radius: 65%;
-      background-color: $BLACK_COLOR_2;
-      color: $WHITE_COLOR_1;
+      background-color: $black-color-2;
+      color: $white-color-1;
       opacity: 0.5;
       cursor: pointer;
-
       white-space: pre-wrap;
       text-align: center;
 
-      @include text2Regular;
+      @include text2-regular;
     }
   }
 }
