--- a/src/pages/auth/components/form/form.scss
+++ b/src/pages/auth/components/form/form.scss
@@ -14,10 +14,10 @@
   }
 
   &_login {
-    height: 450px;
+    min-height: 450px;
   }
 
   &_signup {
-    height: 615px;
+    min-height: 615px;
   }
 }
