--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -14,4 +14,33 @@
   background: $blue-color-1;
   cursor: pointer;
   color: $white-color-1;
+
+  &_red {
+    background-color: $red-color-1;
+  }
+}
+
+.link {
+  color: $blue-color-1;
+  text-decoration: none;
+  cursor: pointer;
+
+  &_xs {
+    @include text2-link;
+  }
+
+  &_button {
+    text-align: left;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+  }
+
+  &_regular {
+    @include text1-regular;
+  }
+
+  &_red {
+    color: $red-color-1;
+  }
 }
