--- a/src/pages/chat/layouts/chatScreen/chatScreen.scss
+++ b/src/pages/chat/layouts/chatScreen/chatScreen.scss
@@ -1,6 +1,7 @@
 @import "/utils/styles/variables";
 
 .chat-screen {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -9,12 +10,18 @@
   width: 100%;
   height: 100%;
 
+  &__buttons {
+    display: flex;
+    gap: 10px;
+  }
+
   &__header {
     position: relative;
     padding-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 20px;
 
     &::after {
       position: absolute;
@@ -61,5 +68,18 @@
   &__form-message {
     width: 100%;
     height: 100%;
+  }
+
+  &__content {
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    height: 100vh;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
